...
            "state" : "translated",
            "value" : "Darock is working hard and will update soon."
          }
        }
      }
    },
    "Debug" : {

    },
    "Debug Search" : {

    },
    "fp" : {
...
    "位置：%@" : {

    },
    "低电量模式" : {

    },
    "关于" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "About"
          }
...
            "state" : "translated",
            "value" : "Uploaders"
          }
        }
      }
    },
    "关闭" : {

    },
    "关闭 iPhone 的 Wi-Fi 以及蓝牙" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
...
        }
      }
    },
    "退出程序" : {

    },
    "通用" : {

    },
    "遇到问题？下载%@（暂未上线），附带上方文本进行反馈" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
...
