...
                        Button(action: {
                            isSearchPresented = true
                        }, label: {
                            Image(systemName: "magnifyingglass")
                                .foregroundColor(.accentColor)
                        })
                        .accessibilityIdentifier("SearchButton")
                    }
                    ToolbarItem(placement: .topBarTrailing) {
                        if dedeUserID != "" {
                            NavigationLink(destination: {PersonAccountView(isSettingsButtonTrailing: true)}, label: {
                                CachedAsyncImage(url: URL(string: userFaceUrl + "@30w")) { phase in
                                    switch phase {
...
                    }
                    if videos.count != 0 {
                        Section {
                            autoreleasepool {
                                ForEach(0...videos.count - 1, id: \.self) { i in
                                    VideoCard(videos[i])
                                        .accessibility(identifier: "SuggestVideo")
                                }
                            }
                        }
                        Section {
                            Button(action: {
                                LoadNewVideos()
...
