...
                    .tag(1)
                PersonAccountView()
                    .tag(2)
                UserDynamicMainView()
                    .tag(3)
            }
            .accessibility(identifier: "MainTabView")
            .sheet(isPresented: $isTermsPresented, onDismiss: {
                isReadTerms = true
            }, content: {TermsListView()})
            .onAppear {
//                if isFirstUsing {
//                    isGuidePresented = true
...
