...
                        Button(action: {
                            searchText = "Darock"
                            isSearchPresented = true
                        }, label: {
                            Text("Search.debug")
                        })
                        .accessibilityIdentifier("SearchDebugButton")
                    }
                }
                if searchHistory.count != 0 {
                    Section(header: Text("Search.history")) {
                        ForEach(0...searchHistory.count - 1, id: \.self) { i in
                            NavigationLink(destination: {SearchView(keyword: searchHistory[i])}, label: {
...
