...
                        .foregroundColor(isDanmakuEnabled ? .accentColor : .gray)
                })
            }
            .padding(.horizontal)
            VStack {
                Picker("", selection: $currentDetailSelection) {
                    Text("详情").tag(1)
                    Text("评论").tag(2)
                    if goodVideos.count != 0 {
                        Text("推荐").tag(3)
                    }
                }
                .accessibilityIdentifier("DetailSelectionPicker")
                .pickerStyle(.segmented)
                .padding(.horizontal)
                .onChange(of: currentDetailSelection) {
...
                                        Spacer()
                                    }
                                    .padding(5)
                                    .background(Color.gray.opacity(0.35))
                                    .cornerRadius(12)
                                })
                                .accessibilityIdentifier("OwnerDetailButton")
                                .onDrag {
                                    playHaptic(sharpness: 0.05, intensity: 0.5)
                                    let itemData = try? NSKeyedArchiver.archivedData(withRootObject: owner, requiringSecureCoding: false)
                                    let provider = NSItemProvider(item: itemData as NSSecureCoding?, typeIdentifier: UTType.data.identifier)
                                    return provider
                                }
...
