...
    @State private var isSearchPresented = false
    @State private var searchHistory = [String]()
    @State private var hotSearches = [String]()
    var body: some View {
        List {
            Section {
                TextField("搜索", text: $searchText) {
                    isSearchPresented = true
                    if searchText != (searchHistory.first ?? "") {
                        UserDefaults.standard.set([searchText] + searchHistory, forKey: "SearchHistory")
                    }
                }
                .submitLabel(.search)
                #if !os(watchOS)
                .focused(isSearchKeyboardFocused)
                #endif
                .accessibilityIdentifier("SearchInput")
                if debug {
                    Button(action: {
                        searchText = "Darock"
                        isSearchPresented = true
                    }, label: {
                        Text("Search.debug")
...
